from Djibouti City

--- a/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/add-stock.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/add-stock.html
@@ -314,7 +314,43 @@
             <td class="allif-fix-table-col">Warehouse</td>
             <td>{{form.warehouse}}</td>
           </tr>
+
+           <tr>
+            <td class="allif-fix-table-col">Item State</td>
+            <td>{{form.item_state}}</td>
+          </tr>
+           <tr>
+            <td class="allif-fix-table-col">Normal Range</td>
+            <td>{{form.normal_range}}</td>
+          </tr>
+           <tr>
+            <td class="allif-fix-table-col">Units</td>
+            <td>{{form.units}}</td>
+          </tr>
+           <tr>
+            <td class="allif-fix-table-col">Length</td>
+            <td>{{form.length}}</td>
+          </tr>
+           <tr>
+            <td class="allif-fix-table-col">Width</td>
+            <td>{{form.width}}</td>
+          </tr>
+           <tr>
+            <td class="allif-fix-table-col">Height</td>
+            <td>{{form.height}}</td>
+          </tr>
+
+           <tr>
+            <td class="allif-fix-table-col">Weight</td>
+            <td>{{form.weight}}</td>
+          </tr>
+           <tr>
+            <td class="allif-fix-table-col">Expires On</td>
+            <td>{{form.expires}}</td>
+          </tr>
+
             <tr>
+
               <td class="allif-fix-table-col">Action</td>
               <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
           
