--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details-clients.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details-clients.html
@@ -53,7 +53,8 @@
     </a>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
       <div class="content-dropdown-menu">
-        <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAddCompanyScope' user_var glblslug %}">Scopes</a></li>
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonCreateDefaultValues' user_var glblslug %}">Default Values</a></li>
+       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAddCompanyScope' user_var glblslug %}">Scopes</a></li>
       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonPaymentTerms' user_var glblslug %}">Payment Terms</a></li>
       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonCurrencies' user_var glblslug %}">Currencies</a></li>
       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonTaxParameters' user_var glblslug %}">Taxes</a></li>
