added default values section

--- a/allifmaaladminapp/templates/allifmaaladminapp/home/home.html
+++ b/allifmaaladminapp/templates/allifmaaladminapp/home/home.html
@@ -72,7 +72,9 @@
       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonDocsFormat' user_var glblslug %}">Doc Formats</a></li>
       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonDataSorts' user_var glblslug %}">Data Filters</a></li>
       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonCompanyDetailsForClients' user_var glblslug %}">Settings</a></li>
+       <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAdminCreateDefaultValues' user_var glblslug %}" title="Clicking this will create document formats and data sorts.">Create Default Values</a></li>
      
+      
       </div>
       </ul>
     </div>
