--- a/allifmaalcommonapp/templates/allifmaalcommonapp/operations/codes/codes.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/operations/codes/codes.html
@@ -37,7 +37,7 @@
       </div>
       </ul>
     </div>
-    <a class="amel-table-list-identifier">Stock Categories:</a>
+    <a class="amel-table-list-identifier">Main Codes:</a>
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
    <a href="{% url 'allifmaalcommonapp:commonCategories' user_var glblslug %}">Main Categories</a>
    <a href="{% url 'allifmaalcommonapp:commonCodes' user_var glblslug %}">Codes</a>
@@ -63,7 +63,7 @@
       <table class="table table-layout">
         <thead>
           <tr class="allif-table-header-row">
-          <td class="allif-fix-table-col">Category</td>
+          <td class="allif-fix-table-col">Name</td>
        
           <td>Code</td>
           <td>Department</td>
